metiendo mas jugadores y refactorizando

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<div id="dude_football"></div>
 	<script src="js/lib/phaser_dudefootball.min.js"></script>
 	<script src="js/player.js"></script>
+	<script src="js/pelota.js"></script>
 	<script src="js/states/boot.js"></script>
 	<script src="js/states/preload.js"></script>
 	<script src="js/states/menu.js"></script>
