añado equipo y mas cosicas

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<script src="js/lib/phaser_dudefootball.min.js"></script>
 	<script src="js/player.js"></script>
 	<script src="js/pelota.js"></script>
+	<script src="js/equipo.js"></script>
 	<script src="js/states/boot.js"></script>
 	<script src="js/states/preload.js"></script>
 	<script src="js/states/menu.js"></script>
