--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 	<div id="dude_football"></div>
 	<script src="js/lib/phaser_dudefootball.min.js"></script>
+	<script src="js/joystick.js"></script>
 	<script src="js/player.js"></script>
 	<script src="js/portero.js"></script>
 	<script src="js/pelota.js"></script>
