nuevos cambios y avances

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Dude_football</title>
   <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
-<body>
+<body style="margin:0">
 	<div id="dude_football"></div>
 	<script src="js/lib/phaser_dudefootball.min.js"></script>
 	<script src="js/joystick.js"></script>
