--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
 <!--[if IE 8]>         <html class="lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html> <!--<![endif]-->
 <head>
-  <title>Dude_football</title>
-  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  	<title>Dude Soccer</title>
+  	<link rel="stylesheet" type="text/css" href="fonts/ArcadeClassic.woff" />
+	<link rel="stylesheet" type="text/css" href="fonts/ArcadeClassic.svg#ArcadeClassic" />
+	<link rel="stylesheet" type="text/css" href="fonts/ArcadeClassic.eot" />
+	<link rel="stylesheet" type="text/css" href="fonts/ArcadeClassic.eot?#iefix" />
+  	<link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body style="margin:0">
 	<div id="dude_football"></div>
+	<div class="fontPreload" style="font-family: ArcadeClassic;">.</div>
 	<script src="js/lib/phaser_dudefootball.min.js"></script>
 	<script src="js/joystick.js"></script>
 	<script src="js/player.js"></script>
